--- a/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/basic-table.html
+++ b/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/basic-table.html
@@ -360,21 +360,52 @@
 					</div>
 					<div class="modal-body">					
 						<div class="form-group">
-							<label>Name</label>
+							<label>First Name</label>
 							<input type="text" class="form-control" required>
 						</div>
+                        <div class="form-group">
+                            <label>Last Name</label>
+                            <input type="text" class="form-control" required>
+                        </div>
 						<div class="form-group">
 							<label>Email</label>
 							<input type="email" class="form-control" required>
 						</div>
 						<div class="form-group">
-							<label>Address</label>
-							<textarea class="form-control" required></textarea>
+							<label>Street Name</label>
+                            <input type="email" class="form-control" required>
 						</div>
+                        <div class="form-group">
+                            <label>Street Number</label>
+                            <input type="email" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Zip Code</label>
+                            <input type="email" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>State</label>
+                            <input type="email" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Town</label>
+                            <input type="email" class="form-control" required>
+                        </div>
 						<div class="form-group">
 							<label>Phone</label>
 							<input type="text" class="form-control" required>
-						</div>					
+						</div>
+
+                        <div class="form-group blu-margin">
+                            <select  class="form-control"  id="dropOperator">
+                                <option value="0">Asign To Departament</option>
+                                <option th:each="l : ${Departament}"
+                                        th:value="${l.departamentId}"
+                                        th:text="${l.departamentName}">
+                                </option>
+                            </select>
+                        </div>
+
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
