--- a/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/basic-table.html
+++ b/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/basic-table.html
@@ -226,7 +226,7 @@
 					</div>
                 </div>
             </div>
-            <table class="table table-striped table-hover">
+            <table id="tabletest" class="table table-striped table-hover">
                 <thead>
                     <tr>
 						<th>
@@ -325,20 +325,22 @@
 <!--                    </tr> -->
                 </tbody>
             </table>
-			<div class="clearfix">
-                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-                <ul class="pagination">
-                    <li class="page-item disabled"><a href="#">Previous</a></li>
-                    <li class="page-item"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
+			<div id="nrrofaqet" class="clearfix">
+                <div class="hint-text">Showing <b>2</b> entries</div>
+                <ul class="pagination" id="maxRows">
+
+<!--                    <li class="page-item active"><a href="#" class="page-link">1</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">2</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">3</a></li>-->
+
+<!--                    <li class="page-item"><a href="#" class="page-link">4</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">5</a></li>-->
+
                 </ul>
             </div>
         </div>
     </div>
+
 	<!-- Edit Modal HTML -->
 	<div id="addEmployeeModal" class="modal fade">
 		<div class="modal-dialog">
@@ -537,6 +539,8 @@
    
   <!-- container-scroller -->
   <!-- plugins:js -->
+
+  <script src="/js/jquery.min.js"></script>
   <script src="/vendors/base/vendor.bundle.base.js"></script>
 
 
@@ -550,7 +554,7 @@
   <script src="/js/hoverable-collapse.js"></script>
   <script src="/js/template.js"></script>
   <script src="/js/tablejavascript.js"></script>
-  <script src="/js/jquery.min.js"></script>
+
   <!-- endinject -->
   <!-- Custom js for this page-->
   <!-- End custom js for this page-->
