--- a/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/basic-table.html
+++ b/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/basic-table.html
@@ -255,74 +255,20 @@
 						<td th:text="${l.addressByAddressId.getTown()}"></td>
                         <td th:text="${l.phone}"></td>
                         <td>
+
                             <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                        </td>
+                        <td>
+                            <span>
+<!--                            <a class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>-->
+                            <form th:action="@{/Admin-Dashboard/Delete/{employeeId}(employeeId=${l.employeeId})}" th:method="delete">
+                            <input  type="submit" class="btn btn-success" value="Delete">
+                            </form>
+                            </span>
+
                         </td>
                     </tr>
-<!--                    <tr>-->
-<!--						<td>-->
-<!--							<span class="custom-checkbox">-->
-<!--								<input type="checkbox" id="checkbox2" name="options[]" value="1">-->
-<!--								<label for="checkbox2"></label>-->
-<!--							</span>-->
-<!--						</td>-->
-<!--                        <td>Dominique Perrier</td>-->
-<!--                        <td>dominiqueperrier@mail.com</td>-->
-<!--						<td>Obere Str. 57, Berlin, Germany</td>-->
-<!--                        <td>(313) 555-5735</td>-->
-<!--                        <td>-->
-<!--                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>-->
-<!--                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>-->
-<!--                        </td>-->
-<!--                    </tr>-->
-<!--					<tr>-->
-<!--						<td>-->
-<!--							<span class="custom-checkbox">-->
-<!--								<input type="checkbox" id="checkbox3" name="options[]" value="1">-->
-<!--								<label for="checkbox3"></label>-->
-<!--							</span>-->
-<!--						</td>-->
-<!--                        <td>Maria Anders</td>-->
-<!--                        <td>mariaanders@mail.com</td>-->
-<!--						<td>25, rue Lauriston, Paris, France</td>-->
-<!--                        <td>(503) 555-9931</td>-->
-<!--                        <td>-->
-<!--                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>-->
-<!--                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>-->
-<!--                        </td>-->
-<!--                    </tr>-->
-<!--                    <tr>-->
-<!--						<td>-->
-<!--							<span class="custom-checkbox">-->
-<!--								<input type="checkbox" id="checkbox4" name="options[]" value="1">-->
-<!--								<label for="checkbox4"></label>-->
-<!--							</span>-->
-<!--						</td>-->
-<!--                        <td>Fran Wilson</td>-->
-<!--                        <td>franwilson@mail.com</td>-->
-<!--						<td>C/ Araquil, 67, Madrid, Spain</td>-->
-<!--                        <td>(204) 619-5731</td>-->
-<!--                        <td>-->
-<!--                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>-->
-<!--                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>-->
-<!--                        </td>-->
-<!--                    </tr>					-->
-<!--					<tr>-->
-<!--						<td>-->
-<!--							<span class="custom-checkbox">-->
-<!--								<input type="checkbox" id="checkbox5" name="options[]" value="1">-->
-<!--								<label for="checkbox5"></label>-->
-<!--							</span>-->
-<!--						</td>-->
-<!--                        <td>Martin Blank</td>-->
-<!--                        <td>martinblank@mail.com</td>-->
-<!--						<td>Via Monte Bianco 34, Turin, Italy</td>-->
-<!--                        <td>(480) 631-2097</td>-->
-<!--                        <td>-->
-<!--                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>-->
-<!--                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>-->
-<!--                        </td>-->
-<!--                    </tr> -->
+
                 </tbody>
             </table>
 			<div id="nrrofaqet" class="clearfix">
@@ -501,27 +447,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- Delete Modal HTML -->
-	<div id="deleteEmployeeModal" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form>
-					<div class="modal-header">						
-						<h4 class="modal-title">Delete Employee</h4>
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					</div>
-					<div class="modal-body">					
-						<p>Are you sure you want to delete these Records?</p>
-						<p class="text-warning"><small>This action cannot be undone.</small></p>
-					</div>
-					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-danger" value="Delete">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
+
     </div>
   </div>
 
