front page completed for review-leaves and add holiday categories

--- a/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/buttons.html
+++ b/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/buttons.html
@@ -192,7 +192,15 @@
               <span class="menu-title">Form elements</span>
             </a>
           </li>
-          
+
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/Admin-Dashboard/Review-Leaves}">
+              <i class="mdi mdi-view-headline menu-icon"></i>
+              <span class="menu-title">Review Leaves</span>
+            </a>
+          </li>
+
+
           <li class="nav-item">
             <a class="nav-link" th:href="@{/Admin-Dashboard/Employees}">
               <i class="mdi mdi-grid-large menu-icon"></i>
