--- a/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/basic-table.html
+++ b/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/basic-table.html
@@ -196,8 +196,15 @@
               <span class="menu-title">Form elements</span>
             </a>
           </li>
-         
-          <li class="nav-item">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/Admin-Dashboard/Review-Leaves}">
+                    <i class="mdi mdi-view-headline menu-icon"></i>
+                    <span class="menu-title">Review Leaves</span>
+                </a>
+            </li>
+
+
+            <li class="nav-item">
             <a class="nav-link" th:href="@{/Admin-Dashboard/Employees}">
               <i class="mdi mdi-grid-large menu-icon"></i>
               <span class="menu-title">Tables</span>
@@ -276,184 +283,20 @@
                 </tbody>
             </table>
 			<div id="nrrofaqet" class="clearfix">
-                <div class="hint-text">Showing <b>2</b> entries</div>
+                <div class="hint-text">Showing <b>5</b> entries</div>
                 <ul class="pagination" id="maxRows">
 
-<!--                    <li class="page-item active"><a href="#" class="page-link">1</a></li>-->
-<!--                    <li class="page-item"><a href="#" class="page-link">2</a></li>-->
-<!--                    <li class="page-item"><a href="#" class="page-link">3</a></li>-->
-
-<!--                    <li class="page-item"><a href="#" class="page-link">4</a></li>-->
-<!--                    <li class="page-item"><a href="#" class="page-link">5</a></li>-->
 
                 </ul>
             </div>
         </div>
     </div>
 
-	<!-- Edit Modal HTML -->
-	<div id="addEmployeeModal" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form>
-					<div class="modal-header">						
-						<h4 class="modal-title">Add Employee</h4>
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					</div>
-					<div class="modal-body">					
-						<div class="form-group">
-							<label>First Name</label>
-							<input type="text" class="form-control" required>
-						</div>
-                        <div class="form-group">
-                            <label>Last Name</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-						<div class="form-group">
-							<label>Email</label>
-							<input type="email" class="form-control" required>
-						</div>
-                        <div class="form-group">
-                            <label>Birthday</label>
-                            <input type="date" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Gender('M' or 'F')</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-						<div class="form-group">
-							<label>Street Name</label>
-                            <input type="email" class="form-control" required>
-						</div>
-                        <div class="form-group">
-                            <label>Street Number</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Zip Code</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>State</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Town</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-						<div class="form-group">
-							<label>Phone</label>
-							<input type="text" class="form-control" required>
-						</div>
-                        <div class="form-group">
-                            <label>Bank Name</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Bank Account Number</label>
-                            <input type="text" class="form-control" required>
-                        </div>
 
-                        <div class="form-group blu-margin">
-                            <select  class="form-control"  id="dropOperator">
-                                <option value="0">Asign To Departament</option>
-                                <option th:each="l : ${Departament}"
-                                        th:value="${l.departamentId}"
-                                        th:text="${l.departamentName}">
-                                </option>
-                            </select>
-                        </div>
-
-					</div>
-					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-success" value="Add">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-	<!-- Edit Modal HTML -->
-	<div id="editEmployeeModal" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form>
-					<div class="modal-header">						
-						<h4 class="modal-title">Edit Employee</h4>
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					</div>
-					<div class="modal-body">
-                        <div class="form-group">
-                            <label>First Name</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Last Name</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Birthday</label>
-                            <input type="date" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Gender('M' or 'F')</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Street Name</label>
-                            <input type="email" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Street Number</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Zip Code</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>State</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Town</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Phone</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Bank Name</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Bank Account Number</label>
-                            <input type="text" class="form-control" required>
-                        </div>
-
-                        <div class="form-group blu-margin">
-                            <select  class="form-control"  id="dropOperator">
-                                <option value="0">Asign To Departament</option>
-                                <option th:each="l : ${Departament}"
-                                        th:value="${l.departamentId}"
-                                        th:text="${l.departamentName}">
-                                </option>
-                            </select>
-                        </div>
-                    </div>
-
-				</form>
-			</div>
-		</div>
 	</div>
 
     </div>
-  </div>
+
 
 
 
