--- a/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/employee-add.html
+++ b/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/employee-add.html
@@ -117,7 +117,7 @@
                 <div class="modal-footer">
 
 
-                    <a type="submit" class="btn btn-default" data-dismiss="modal" value="Cancel">Cancel</a>
+                    <a onclick="location.href = '/Admin-Dashboard/Employees'" type="submit" class="btn btn-default" data-dismiss="modal" value="Cancel">Cancel</a>
 
 
 
