Pjesa e manage Holiday Categories Completed(filled table, add new holiday cat, edit category and delete category)

--- a/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/Edit-Holiday.html
+++ b/EMS-PROJECT-LAB-COURSE 2/AdminForm/src/main/resources/templates/Edit-Holiday.html
@@ -36,9 +36,13 @@
 
 
 
-            <form id="forma" th:object="${HolidayCategory}" th:action="@{/Admin-Dashboard/Add-Holiday-Category}" th:method="post">
+            <form id="forma" th:object="${HolidayCategory}" th:action="@{/Admin-Dashboard/Holiday-Category/Update/{categoryId} (categoryId=${HolidayCategory.categoryId})}" th:method="put">
 
 
+                <div th:type="hidden" class="form-group">
+                    <label>Holiday's Category Name</label>
+                    <input th:type="hidden" th:field="*{categoryId}" type="text" class="form-control" required>
+                </div>
 
 
 
@@ -63,7 +67,7 @@
 
 
 
-                    <input type="submit" class="btn btn-success" value="Add">
+                    <input type="submit" class="btn btn-success" value="Edit">
 
 
                 </div>
